[package]
name = "garaged"
version = "0.1.0"
authors = ["Aaron Brodersen <aaron@abrodersen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10.0"
futures = "0.3"
tokio = { version = "1.15.0", features = ["full"] }
sysfs_gpio = { version = "0.6", features = ["async-tokio"] }
rumqttc = "0.10"
anyhow = "1.0"
serde_json = "1.0"
strum = { version = "0.23", features = ["derive"] }