[package]
name = "garaged"
version = "0.2.0"
authors = ["Aaron Brodersen <aaron@abrodersen.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }
sysfs_gpio = { version = "0.6.1", features = ["async-tokio"] }
rumqttc = "0.12.0"
anyhow = "1.0.57"
serde_json = "1.0.81"
strum = { version = "0.24.0", features = ["derive"] }
